# template_cockroachdb_python_api

./: README.md  dbinit.sql  docker-compose.yml  pyproject.toml
app/: main.py  models.py
